--- a/testheroku/myfile/templates/myfile/index.html
+++ b/testheroku/myfile/templates/myfile/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <title>My File</title>
+    <title>My File-S3Task</title>
 </head>
 
 <body>
