--- a/testheroku/mypage/templates/mypage/index.html
+++ b/testheroku/mypage/templates/mypage/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- Titulo da página -->
-    <title>My Page</title>
+    <title>My Image-S3Task</title>
 </head>
 
 <body>
